Mozilla warnings: use compatible letter-spacing value, fix font to font-style

--- a/themes/Wordpress/Wordpress.css
+++ b/themes/Wordpress/Wordpress.css
@@ -1,5 +1,5 @@
 /**
- * $Id: Wordpress.css,v 1.4 2005-01-26 20:49:32 uckelman Exp $
+ * $Id: Wordpress.css,v 1.5 2007-01-02 13:30:19 rurban Exp $
  *
  * PhpWiki's Portland style sheet based on the original Wiki
  *
@@ -168,7 +168,7 @@ input {
 
 #actionbar ul li {
         font: italic normal 100% 'Times New Roman', Times, serif;
-        letter-spacing: 100%;
+        letter-spacing: 0.1em;
         margin-top: 10px;
         padding-bottom: 2px; /*border-bottom: dotted 1px #ccc;*/
 }
@@ -186,7 +186,7 @@ input {
 #actionbar ul ul li {
         border: 0;
         font: normal 70% Verdana, sans-serif;
-        letter-spacing: 100%;
+        letter-spacing: 0;
         margin-top: 0;
         padding: 0 0 1px 12px;
 }
@@ -214,7 +214,7 @@ input {
 .cal a {
         /* display: block; */
         text-decoration: none;
-        font: normal;
+        font-style: normal;
 }
 
 .cal a:hover {
